--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-image: url("../public/assets/fondo.png");
+  background-color: #f5f5f5;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
